compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__pub_function_inside_a_type.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1722
expression: "\ntype Wibble {\n  pub fn wobble() {}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  pub fn wobble() {}
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:3
  │
3 │   pub fn wobble() {}
  │   ^^^ I was not expecting this

Found the keyword `pub`, expected one of: 
- `}`
- a record constructor
Hint: Gleam is not an object oriented programming language so
functions are declared separately from types.
